[package]
name = "fs_demo"
version = "0.1.0"
edition = "2021"
authors = ["hukeyang <hky1999@buaa.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.unishyper]
path = "../../"
default-features = false

[features]
default = ["qemu"]
qemu = [
    "alloc",
    "unishyper/aarch64",
    "unishyper/alloc",
    # "unishyper/smp",
    "unishyper/fs",
    "unishyper/fat",
    "unishyper/qemu",
    "unishyper/terminal"
    ]
shyper = [
    "alloc",
    "unishyper/aarch64",
    "unishyper/alloc",
    # "unishyper/smp",
    "unishyper/fs",
    "unishyper/unilib",
    "unishyper/shyper"
    ]
alloc = []