[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"
authors = ["hukeyang <hky1999@buaa.edu.cn>"]

[target.'cfg(target_os = "shyper")'.dependencies]
unishyper = {path = "../../", default-features = false, features = ["qemu", "std"]}

[dependencies.unishyper]
path = "../../"
default-features = false
features = ["terminal"]

[features]
qemu = ["unishyper/qemu"]
k210 = ["unishyper/k210"]
shyper = ["unishyper/shyper"]
tx2 = ["unishyper/tx2"]
rk3588 = ["unishyper/rk3588"]
pi4 = ["unishyper/pi4"]
# [profile.release]
# # opt-level = 's'  # Optimize for size. Fix: link error when target is aarch64-unknown-shyper.
# lto = true