[package]
name = "httpd"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tiny_http = "0.12"

[target.'cfg(target_os = "shyper")'.dependencies]
unishyper = {path = "../../", default-features = false, features = ["qemu", "std", "tcp"]} 
