[package]
authors = ["hukeyang <hky1999@buaa.edu.cn>"]
edition = "2021"
name = "httpd"
version = "0.1.0"

[dependencies]
tiny_http = "0.12"

[target.'cfg(target_os = "shyper")'.dependencies]
unishyper = {path = "../../", default-features = false, features = ["qemu", "std", "tcp", "pci", "log-level-debug"]}

[features]
qemu = []