[package]
name = "isolation_test"
version = "0.1.0"
edition = "2021"
authors = ["hukeyang <hky1999@buaa.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.unishyper]
path = "../../"
default-features = false

[features]
default = ["qemu"]
qemu = [
    "unishyper/alloc",
    "unishyper/qemu",
    "unishyper/serial",
    "unishyper/mpk"
]