[package]
name = "isolation_test"
version = "0.1.0"
edition = "2021"
authors = ["hukeyang <hky1999@buaa.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.unishyper]
path = "../../"
default-features = false

[dependencies]
ring = { path = "../../../Rust_cryptography/ring"}
data-encoding = {version = "2.4.0", default-features = false, features = ["alloc"]}

[dependencies.zone_protected]
path = "../../crates/reliability/zone_protected"

[features]
default = ["qemu"]
qemu = [
    "unishyper/alloc",
    "unishyper/qemu",
    "unishyper/serial",
    # "unishyper/terminal",
    "unishyper/zone"
]
