[package]
authors = ["hukeyang <hky1999@buaa.edu.cn>"]
edition = "2021"
name = "net_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no-std-net = "0.6.0"

[dependencies.rust_shyper_os]
default-features = false
path = "../../"

[features]
default = ["qemu"]
qemu = [
    "alloc",
    "rust_shyper_os/alloc",
    "rust_shyper_os/tcp", 
    "rust_shyper_os/qemu",
    "rust_shyper_os/serial",
    ]
shyper = [
    "alloc", 
    "rust_shyper_os/alloc", 
    "rust_shyper_os/tcp", 
    "rust_shyper_os/shyper",
    "rust_shyper_os/serial",
    ]
alloc = []

[[bin]]
name = "server-bw"
path = "src/tcp-bandwidth/server.rs"

[[bin]]
name = "client-bw"
path = "src/tcp-bandwidth/client.rs"

[[bin]]
name = "server-latency"
path = "src/tcp-latency/server.rs"

[[bin]]
name = "client-latency"
path = "src/tcp-latency/client.rs"
