[package]
authors = ["hukeyang <hky1999@buaa.edu.cn>"]
edition = "2021"
name = "net_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no-std-net = "0.6.0"

[dependencies.unishyper]
default-features = false
path = "../../"

[features]
default = ["qemu"]
qemu = [
    "alloc",
    "unishyper/alloc",
    "unishyper/tcp", 
    "unishyper/qemu",
    "unishyper/serial",
    ]
shyper = [
    "alloc",
    "unishyper/alloc", 
    "unishyper/tcp", 
    "unishyper/shyper",
    "unishyper/serial",
    ]
alloc = []

[[bin]]
name = "server-bw"
path = "src/tcp-bandwidth/server.rs"

[[bin]]
name = "client-bw"
path = "src/tcp-bandwidth/client.rs"

[[bin]]
name = "server-latency"
path = "src/tcp-latency/server.rs"

[[bin]]
name = "client-latency"
path = "src/tcp-latency/client.rs"
