[package]
name = "net_demos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.unishyper]
default-features = false
path = "../../"

[features]
default = ["qemu"]
qemu = [
    "unishyper/alloc",
    "unishyper/net",
    # "unishyper/axdriver",
    "unishyper/qemu",
    "unishyper/serial",
    # "unishyper/async-net",
    # "unishyper/unwind",
    ]
shyper = [
    "unishyper/alloc", 
    "unishyper/net", 
    "unishyper/shyper",
    "unishyper/serial",
    ]
alloc = []

[[bin]]
name = "udp-server"
path = "src/udp-server.rs"

[[bin]]
name = "http-server"
path = "src/http-server.rs"
