[package]
authors = ["hukeyang <hky1999@buaa.edu.cn>"]
edition = "2021"
name = "net_tcp_bench"
version = "0.1.0"
description = "A Rust program to measure bandwidth or latency over a Rust TCP connection, ported from https://github.com/hky1999/rust-tcp-io-perf.git"

[dependencies.unishyper]
default-features = false
path = "../../"

[features]
default = ["qemu"]
qemu = [
    "unishyper/alloc",
    "unishyper/net",
    # "unishyper/pci",
    "unishyper/qemu",
    "unishyper/serial",
    # "unishyper/unwind",
    ]
shyper = [
    "unishyper/alloc", 
    "unishyper/net", 
    "unishyper/shyper",
    "unishyper/serial",
    ]
alloc = []

[[bin]]
name = "server-bw"
path = "src/tcp-bandwidth/server.rs"

[[bin]]
name = "client-bw"
path = "src/tcp-bandwidth/client.rs"

[[bin]]
name = "server-latency"
path = "src/tcp-latency/server.rs"

[[bin]]
name = "client-latency"
path = "src/tcp-latency/client.rs"

# [profile.release]
# # opt-level = 's'
# lto = true
