[package]
name = "std_test"
version = "0.1.0"
edition = "2021"
authors = ["hukeyang <hky1999@buaa.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "shyper")'.dependencies]
unishyper = {path = "../../", default-features = false, features = ["qemu", "std", "serial"]} 

[profile.release]
debug = true