[package]
name = "std_test"
version = "0.1.0"
edition = "2021"
authors = ["hukeyang <hky1999@buaa.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "shyper")'.dependencies]
unishyper = {path = "../../", default-features = false, features = ["tx2", "std", "serial"]} 

[features]
default = ["qemu"]
qemu = [
    # "alloc",
    "unishyper/alloc",
    # "unishyper/smp",
    # "unishyper/scheduler-percore",
    "unishyper/qemu",
    "unishyper/serial",
    # "unishyper/mpk",
    # "unishyper/unwind",
    # "unishyper/terminal",
    # "unishyper/fs",
    ]
tx2 = [
    "unishyper/alloc",
    "unishyper/tx2",
    "unishyper/serial",
    # "unishyper/terminal",
    ]

# [profile.release]
# debug = true
# opt-level = 3  # Optimize for size. Fix: link error when target is aarch64-unknown-shyper.
# lto = true