[package]
name = "user"
version = "0.1.0"
edition = "2021"
authors = ["hukeyang <hky1999@buaa.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rust_shyper_os]
path = "../../"
default-features = false

[features]
default = ["qemu"]
qemu = [
    # "alloc",
    "rust_shyper_os/alloc",
    # "rust_shyper_os/smp",
    "rust_shyper_os/qemu",
    "rust_shyper_os/unwind",
    "rust_shyper_os/terminal"
    ]
shyper = [
    "alloc",
    "rust_shyper_os/alloc",
    "rust_shyper_os/smp",
    "rust_shyper_os/shyper"
    ]
alloc = []