[package]
name = "user"
version = "0.1.0"
edition = "2021"
authors = ["hukeyang <hky1999@buaa.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.unishyper]
path = "../../"
default-features = false

[features]
default = ["qemu"]
qemu = [
    # "alloc",
    "unishyper/aarch64",
    "unishyper/alloc",
    # "unishyper/smp",
    "unishyper/scheduler-percore",
    "unishyper/qemu",
    "unishyper/serial",
    "unishyper/unwind",
    # "unishyper/terminal",
    # "unishyper/fs",
    ]
tx2 = [
    "unishyper/alloc",
    "unishyper/tx2",
    # "unishyper/terminal",
    ]
shyper = [
    "unishyper/alloc",
    # "unishyper/smp",
    "unishyper/shyper",
    "unishyper/terminal",
    "unishyper/fs",
    "unishyper/unilib",
    "unishyper/fat",
    ]
alloc = []